--- a/milestone-1/assets/css/style.css
+++ b/milestone-1/assets/css/style.css
@@ -1,7 +1,7 @@
 
 .green_background {
     background-color: #009688;
-    height: 118px;
+    height: 108px;
     width: 100%;
     position: absolute;
     top: 0;
@@ -35,11 +35,32 @@ img.avatar {
     width: 90%;
 }
 
-p.user_name {
+p {
     margin-bottom: 0;
 }
 
 .head i {
     color: #B1B1B1;
     margin: 0 0.75rem 0 0.75rem;
+}
+
+.lightblue_bg {
+    background-color: #8EDAFC;
+}
+
+span.bell_container {
+    background-color: white;
+    color: #8EDAFC;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    position: relative;
+}
+
+.fa-bell-slash {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    font-size: 1.5rem;
 }
