--- a/milestone-1/assets/css/style.css
+++ b/milestone-1/assets/css/style.css
@@ -28,7 +28,7 @@ img.avatar {
 .head {
     display: flex;
     background-color: #EAEAEA;
-    ;
+    width: 100%;
 }
 
 .window_container {
@@ -39,9 +39,10 @@ p {
     margin-bottom: 0;
 }
 
-.window_left i {
+.head i {
     color: #B1B1B1;
     margin: 0 0.75rem 0 0.75rem;
+    font-size: 1.5rem;
 }
 
 .lightblue_bg {
@@ -82,7 +83,6 @@ span.bell_container {
 }
 
 .date {
-    font-size: 0.7rem;
     color: grey;
     position: absolute;
     top: 1rem;
@@ -90,6 +90,13 @@ span.bell_container {
 }
 
 p.message_preview {
-    font-size: 0.7rem;
     color: grey;
+}
+
+.window_left {
+    border-right: 1px solid grey;
+}
+
+.small_font {
+    font-size: 0.75rem;
 }
