--- a/milestone-1/assets/css/style.css
+++ b/milestone-1/assets/css/style.css
@@ -1,9 +1,3 @@
-
-body {
-    height: 100vh;
-    /* background-image: linear-gradient(to bottom), #009688; */
-}
-
 .green_background {
     background-color: #009688;
     height: 108px;
@@ -16,7 +10,7 @@ body {
 
 .grey_background {
     background-color: #DADBD4;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -38,6 +32,7 @@ img.avatar {
 
 .window_container {
     width: 90%;
+    height: 90vh;
 }
 
 p {
@@ -102,6 +97,12 @@ p.message_preview {
 
 .window_left {
     border-right: 1px solid grey;
+    overflow: hidden;
+    height: 100%;
+}
+
+.window_right {
+    height: 100%;
 }
 
 .small_font {
@@ -115,7 +116,8 @@ p.message_preview {
 }
 
 .main_chat {
-    height: calc(100% - 92px);
+    height: calc(100% - 92px - 64px);
+    overflow-y: scroll;
 }
 
 .chat_controller {
@@ -143,6 +145,32 @@ p.message_preview {
     background-color: #FAFAFA;
 }
 
-.active {
-    background-color: grey;
+.message.received {
+    background-color: white;
+    align-self: flex-start;
+}
+
+.message.sent {
+    background-color: #D5F9BA;
+    align-self: flex-end;
+}
+
+.chat_message_date {
+    position: absolute;
+    right: 0.5rem;
+    bottom: 0.5rem;
+    color: grey;
+    font-size: 0.75rem;
+}
+
+.message {
+    min-width: 280px;
+    padding: 1rem 1rem 1.8rem 1rem;
+    border-radius: 1rem;
+}
+
+.preview_container {
+    overflow-y: scroll;
+    height: calc(90vh - 250px);
+    background-color: white;
 }
