--- a/milestone-2/assets/css/style.css
+++ b/milestone-2/assets/css/style.css
@@ -1,9 +1,3 @@
-
-body {
-    height: 100vh;
-    background-image: linear-gradient(to bottom), #009688;
-}
-
 .green_background {
     background-color: #009688;
     height: 108px;
@@ -38,6 +32,7 @@ img.avatar {
 
 .window_container {
     width: 90%;
+    height: 90vh;
 }
 
 p {
@@ -102,6 +97,12 @@ p.message_preview {
 
 .window_left {
     border-right: 1px solid grey;
+    overflow: hidden;
+    height: 100%;
+}
+
+.window_right {
+    height: 100%;
 }
 
 .small_font {
@@ -115,7 +116,8 @@ p.message_preview {
 }
 
 .main_chat {
-    height: calc(100% - 92px);
+    height: calc(100% - 92px - 64px);
+    overflow-y: scroll;
 }
 
 .chat_controller {
@@ -165,4 +167,10 @@ p.message_preview {
     min-width: 280px;
     padding: 1rem 1rem 1.8rem 1rem;
     border-radius: 1rem;
+}
+
+.preview_container {
+    overflow-y: scroll;
+    height: calc(90vh - 250px);
+    background-color: white;
 }
