--- a/milestone-4/assets/css/style.css
+++ b/milestone-4/assets/css/style.css
@@ -1,8 +1,3 @@
-
-body {
-    height: 100vh;
-}
-
 .green_background {
     background-color: #009688;
     height: 108px;
@@ -106,6 +101,10 @@ p.message_preview {
     height: 100%;
 }
 
+.window_right {
+    height: 100%;
+}
+
 .small_font {
     font-size: 0.75rem;
 }
@@ -117,8 +116,8 @@ p.message_preview {
 }
 
 .main_chat {
-    height: calc(100% - 92px);
-    overflow: scroll;
+    height: calc(100% - 92px - 64px);
+    overflow-y: scroll;
 }
 
 .chat_controller {
@@ -171,5 +170,7 @@ p.message_preview {
 }
 
 .preview_container {
-    overflow: scroll;
+    overflow-y: scroll;
+    height: calc(90vh - 250px);
+    background-color: white;
 }
