--- a/milestone-5/assets/css/style.css
+++ b/milestone-5/assets/css/style.css
@@ -165,8 +165,9 @@ p.message_preview {
 
 .message {
     min-width: 280px;
-    padding: 1rem 1rem 1.8rem 1rem;
+    padding: 1rem 2rem 1.8rem 1rem;
     border-radius: 1rem;
+    position: relative;
 }
 
 .preview_container {
@@ -195,4 +196,25 @@ i.fa-chevron-down {
 
 .dropdown {
     display: none;
+    position: absolute;
+    top: 2rem;
+    right: 1rem;
+    background-color: white;
+    z-index: 2;
+    border: 1px solid rgba(128, 128, 128, 0.103);
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px rgba(128, 128, 128, 0.363);
 }
+
+.dropdown div:first-child {
+    border-bottom: 1px solid rgba(128, 128, 128, 0.267);
+}
+
+.dropdown div {
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+.dropdown div:hover {
+    background-color: rgba(128, 128, 128, 0.123);
+} 
